Corrected text running out of div with word wrap

--- a/application/static/assets/css/style.css
+++ b/application/static/assets/css/style.css
@@ -17,6 +17,10 @@ body {
   -webkit-box-orient: vertical;
 }
 
+.word-wrap {
+  word-wrap: break-word;
+}
+
 /* Navigation */
 .navbar-brand img {
   height: 5vh;
